Added DB functionality and navigation
DB: add new Account, modify account name, modify user Name

User provider.

New page: Account_page and edit_account page

Navigation: Empty category list page, diary page, event_list page.

--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,13 @@ web/icons/Icon-512.png
 .dart_tool/flutter_build/e71997db9411ba0985b68844d8f831dc/kernel_snapshot.d
 .dart_tool/flutter_build/e71997db9411ba0985b68844d8f831dc/kernel_snapshot.stamp
 .idea/runConfigurations/main_dart.xml
+.dart_tool/flutter_build/f61327cdc535926f6bd3ed23a45a268e/.filecache
+.dart_tool/flutter_build/f61327cdc535926f6bd3ed23a45a268e/android_aot_bundle_release_android-arm64.stamp
+.dart_tool/flutter_build/f61327cdc535926f6bd3ed23a45a268e/android_aot_release_android-arm64.stamp
+.dart_tool/flutter_build/f61327cdc535926f6bd3ed23a45a268e/aot_android_asset_bundle.stamp
+.dart_tool/flutter_build/f61327cdc535926f6bd3ed23a45a268e/app.dill
+.dart_tool/flutter_build/f61327cdc535926f6bd3ed23a45a268e/flutter_assets.d
+.dart_tool/flutter_build/f61327cdc535926f6bd3ed23a45a268e/kernel_snapshot.d
+.dart_tool/flutter_build/f61327cdc535926f6bd3ed23a45a268e/kernel_snapshot.stamp
+.dart_tool/flutter_build/f61327cdc535926f6bd3ed23a45a268e/arm64-v8a/app.so
+.dart_tool/flutter_build/f61327cdc535926f6bd3ed23a45a268e/arm64-v8a/gen_snapshot.d
